--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -34,22 +34,26 @@
     <!-- RTL Css -->
     <link rel="stylesheet" href="~/HopeUi-Dashboard/assets/css/rtl.min.css" />
 
-    <!-- DataTable Css -->
-    <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
     <!--Select2 css-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
 
 
-    <!--Jquery script-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <!--Jquery script-->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+
+    <!-- DataTable Css -->
+    <link href="https://cdn.datatables.net/v/bs5/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.css" rel="stylesheet">
 
 
     <!-- DataTable Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.js"></script>
+ 
 
 </head>
 <body class="  ">
@@ -604,32 +608,32 @@
 
 
     <!-- Library Bundle Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/core/libs.min.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/core/libs.min.js"></script> *@
 
     <!-- External Library Bundle Script -->
     <script src="~/HopeUi-Dashboard/assets/js/core/external.min.js"></script>
 
     <!-- Widgetchart Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/charts/widgetcharts.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/charts/widgetcharts.js"></script> *@
 
     <!-- mapchart Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/charts/vectore-chart.js"></script>
-    <script src="~/HopeUi-Dashboard/assets/js/charts/dashboard.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/charts/vectore-chart.js"></script> *@
+    @* <script src="~/HopeUi-Dashboard/assets/js/charts/dashboard.js"></script> *@
 
     <!-- fslightbox Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/plugins/fslightbox.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/plugins/fslightbox.js"></script> *@
 
     <!-- Settings Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/plugins/setting.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/plugins/setting.js"></script> *@
 
     <!-- Slider-tab Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/plugins/slider-tabs.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/plugins/slider-tabs.js"></script> *@
 
     <!-- Form Wizard Script -->
-    <script src="~/HopeUi-Dashboard/assets/js/plugins/form-wizard.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/js/plugins/form-wizard.js"></script> *@
 
     <!-- AOS Animation Plugin-->
-    <script src="~/HopeUi-Dashboard/assets/vendor/aos/dist/aos.js"></script>
+    @* <script src="~/HopeUi-Dashboard/assets/vendor/aos/dist/aos.js"></script> *@
 
     <!-- App Script -->
     <script src="~/HopeUi-Dashboard/assets/js/hope-ui.js" defer></script>
